<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vo.cvcompany.com.myapplication.MainActivity">

    <EditText
        android:id="@+id/etDescription"
        android:hint="@string/description"
        android:background="@drawable/custom_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/etName"
        android:background="@drawable/custom_button"
        android:hint="@string/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etDescription"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />


    <ImageView
        android:id="@+id/imgPicture"
        android:src="@drawable/ic_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />
    
    <ImageView
        android:id="@+id/imgTakePicture"
        android:src="@drawable/ic_camera"
        android:layout_width="50dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgOpenFolder"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgOpenFolder"
        android:layout_marginLeft="16dp" />

    <ImageView
        android:id="@+id/imgOpenFolder"
        android:src="@drawable/ic_download_open_folder"
        android:layout_width="50dp"
        android:layout_height="50dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="18dp"
        app:layout_constraintRight_toRightOf="@+id/etName"
        android:layout_marginTop="146dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="18dp" />
    <Button
        android:id="@+id/btnAdd"
        android:text="@string/add"
        android:background="@drawable/sd"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="66dp"
        android:layout_marginTop="428dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="66dp" />
    <Button
        android:id="@+id/btnCancel"
        android:text="@string/cancel"
        android:background="@drawable/sd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="65dp"
        android:layout_marginTop="428dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="65dp" />
    <Button
        android:id="@+id/btnActivity2"
        android:text="@string/acitivityinformation"
        android:textAllCaps="false"
        android:background="@drawable/sd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="34dp"
        app:layout_constraintRight_toRightOf="@+id/imgPicture"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/imgPicture"
        android:layout_marginRight="34dp" />

</android.support.constraint.ConstraintLayout>
